refactor: simplify tests, remove deprecated methods